--- a/particlesjs-config.json
+++ b/particlesjs-config.json
@@ -8,13 +8,13 @@
       }
     },
     "color": {
-      "value": "#333333"
+      "value": "#fff"
     },
     "shape": {
       "type": "circle",
       "stroke": {
         "width": 0,
-        "color": "#000000"
+        "color": "#fff"
       },
       "polygon": {
         "nb_sides": 5
@@ -48,7 +48,7 @@
     "line_linked": {
       "enable": true,
       "distance": 126.26362266116361,
-      "color": "#333333",
+      "color": "#fff",
       "opacity": 0.4,
       "width": 1
     },
